test/syntax/valid/22_parallel_block_with_block.sg
// Two sequential blocks can run in parallel.
import io

{
    io.print("left-1")
    io.print("left-2")
}, {
    io.print("right-1")
    io.print("right-2")
}
