test/syntax/errors/11_double_comma.sg
// expect-error: parse error
// Two consecutive commas at statement level.
import io

io.print("a"),, io.print("b")
